# Pocketflow_Research_Agent

./: .gitignore  README.md  pyproject.toml  testing.ipynb  thaijo_response.json
.clinerules/: thaijo.txt  uv.txt
src/pocketflow_research/: api.py  flow.py  main.py  models.py  nodes.py
src/pocketflow_research/core/rag/: __init__.py  chunk_text.py  embedding.py  faiss_utils.py  fetch_arxiv_papers.py  fetch_thaijo_papers.py  process_pdf.py
src/pocketflow_research/pocketflow/: __init__.py
src/pocketflow_research/pocketflow_custom/: __init__.py  custom_components.py
src/pocketflow_research/test/: test_arxiv_api.py  test_thaijo_api.py
src/pocketflow_research/utils/: call_llm.py  chunk_text.py  embedding.py  process_pdf.py  proxy_rotatation_request.py
