[project]
name = "pocketflow-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv",
    "requests",
    "pymupdf",
    "sentence-transformers",
    "faiss-cpu", # Or faiss-gpu if you have CUDA
    "numpy",
    "ipykernel>=6.29.5",
    "dotenv>=0.9.9",
    "model2vec>=0.5.0",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "gradio>=4.31.0",
    "pocketflow>=0.0.2",
]
